--- a/src/pages/blog/blog.module.css
+++ b/src/pages/blog/blog.module.css
@@ -63,7 +63,7 @@
 }
 
 .postPreview {
-  max-width: 600px;
+  max-width: 800px;
   margin: 10px auto;
   border-bottom: 1px solid rgba(0, 0, 0, 0.8);
 }
@@ -79,6 +79,7 @@
 
 .post h1 {
   margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 .post :global(h2),
@@ -92,6 +93,7 @@
   margin: 2rem auto;
   box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
   max-width: 100%;
+  width: auto;
   display: block;
 }
 
@@ -101,10 +103,11 @@
 }
 
 .post :global(.callout) {
+  margin: 2em auto;
   padding: 16px 16px 16px 12px;
   display: flex;
   width: 100%;
-  border-radius: 3px;
+  border-radius: 6px;
   border-width: 1px;
   border-style: solid;
   border-color: transparent;
@@ -124,13 +127,13 @@
 }
 
 .post {
-  max-width: calc(600px + 10%);
+  max-width: 75vw;
   margin: 0 auto;
   padding: 5%;
 }
 
 .post :global(hr) {
-  margin-bottom: 2em;
+  margin: 1em 0;
 }
 
 .post :global(a + p) {
